--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "vite": "^4.1.4"
+    "tailwindcss": "^3.3.1",
+    "vee-validate": "^4.8.4",
+    "vite": "^4.1.4",
+    "vue-i18n": "^9.2.2"
   }
 }
