--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.1",
     "vee-validate": "^4.8.4",
