--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/vue": "^2.0.17",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
