--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.17",
     "pinia": "^2.0.32",
+    "unplugin-vue-components": "^0.24.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
