--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.4",
+    "screenfull": "^6.0.2",
     "tailwindcss": "^3.3.1",
     "vee-validate": "^4.8.4",
     "vite": "^4.1.4",
