--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "@vuepic/vue-datepicker": "^5.4.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.4",
