--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.4",
